force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Epic__c/agf__ADM_Epic__c.object-meta.xml
<CustomObject>
    <label>Epic</label>
    <nameField>
        <label>Epic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Epics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>