force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Epic__c/fields/agf__Category__c.field-meta.xml
<CustomField>
    <fullName>agf__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Component</fullName>
            </value>
            <value>
                <fullName>Feature</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>