force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Epic__c/fields/agf__Committed_By_Team__c.field-meta.xml
<CustomField>
    <fullName>agf__Committed_By_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Committed By Team</label>
    <type>Checkbox</type>
</CustomField>