force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Epic__c/fields/agf__Description__c.field-meta.xml
<CustomField>
    <fullName>agf__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>