force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Epic__c/fields/agf__Design_Lead__c.field-meta.xml
<CustomField>
    <fullName>agf__Design_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Design Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Design_Lead_Epics</relationshipName>
    <type>Lookup</type>
</CustomField>