force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Epic__c/fields/agf__Priority__c.field-meta.xml
<CustomField>
    <fullName>agf__Priority__c</fullName>
    <label>Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>