force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Epic__c/fields/agf__Project__c.field-meta.xml
<CustomField>
    <fullName>agf__Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>agf__PPM_Project__c</referenceTo>
    <relationshipLabel>Epics</relationshipLabel>
    <relationshipName>Epics</relationshipName>
    <type>Lookup</type>
</CustomField>