force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Epic__c/fields/agf__Team__c.field-meta.xml
<CustomField>
    <fullName>agf__Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Team</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an active team.</errorMessage>
        <filterItems>
            <field>agf__ADM_Scrum_Team__c.agf__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>Epics</relationshipLabel>
    <relationshipName>Epics</relationshipName>
    <type>Lookup</type>
</CustomField>